# bot_de_scraping_noticias

./: .gitignore  README.md  mypy.ini  pyproject.toml
bot_de_scraping_noticias/: main.py
bot_de_scraping_noticias/database/: __init__.py  models.py
bot_de_scraping_noticias/email/: email_sender.py
bot_de_scraping_noticias/scraping/: scraper.py
