[tool.poetry]
name = "bot-de-scraping-noticias"
version = "0.1.0"
description = ""
authors = ["wislla <wislla.vasconcelos@gmail.com>"]
readme = "README.md"

[tool.mypy]
mypy_path = "src"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
flask-mail = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
